<resources>
    <string name="app_name">SanadPay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SanadPay</string>
    <string name="nav_header_subtitle">https://sanadpay.sa</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_tickets">Tickets</string>


    <string name="menu_aggregations">Aggregations</string>
    <string name="menu_customer_report">Customer Reports</string>
    <string name="menu_sla_reports">Sla Reports</string>
    <string name="menu_stock_reports">Stock Reports</string>


    <string name="menu_consumeable_custodies">Consumable Custodies</string>
    <string name="menu_sim_custodies">Sim Custodies</string>
    <string name="menu_terminal_custodies">Terminal Custodies</string>
    <string name="settings">Settings</string>
    <string name="custodies">Custodies</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>


</resources>